tests/cn/mergesort_alt.c.test
return code: 1
In file included from ./mergesort_alt.test.c:238:
./mergesort_alt.gen.h:60:23: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
   60 | struct a_1927_record* bennet_split();
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: conflicting prototype is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort_alt.test.c:238:
./mergesort_alt.gen.h:60:23: error: conflicting types for 'bennet_split'
   60 | struct a_1927_record* bennet_split();
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: previous declaration is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort_alt.test.c:238:
./mergesort_alt.gen.h:223:23: error: conflicting types for 'bennet_split'
  223 | struct a_1927_record* bennet_split()
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: previous declaration is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort_alt.test.c:238:
./mergesort_alt.gen.h:295:50: error: too few arguments to function call, expected 3, have 0
  295 |   struct a_1927_record* cn_result = bennet_split();
      |                                     ~~~~~~~~~~~~ ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: 'bennet_split' declared here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 warning and 3 errors generated.
Failed to compile 'mergesort_alt.test.c' in /tmp.